crates/common/src/instrument/snapshots/common__instrument__layout__tests__instrument_layout_810x1080.snap
---
source: crates/common/src/instrument/layout.rs
expression: layout
---
{
  "space": [
    810.0,
    1080.0
  ],
  "orientation": "Vertical",
  "left_string_position": [
    [
      351.84375,
      0.0
    ],
    [
      351.84375,
      1080.0
    ]
  ],
  "right_string_position": [
    [
      458.15625,
      0.0
    ],
    [
      458.15625,
      1080.0
    ]
  ],
  "instrument_breadth": 106.3125,
  "key_radius": 25.479956084569032,
  "key_band_length": 351.84375,
  "key_band_breadth": 84.375,
  "safe_area_padding": {
    "top": 0.0,
    "right": 0.0,
    "bottom": 0.0,
    "left": 0.0
  },
  "key_bands_gap": 16.0,
  "bands_gap": 19.2,
  "num_keys_per_band": 3,
  "num_bands": 2,
  "first_band_channel": "Right",
  "scale": "In"
}
