crates/common/src/instrument/snapshots/common__instrument__layout__tests__instrument_layout_820x1180.snap
---
source: crates/common/src/instrument/layout.rs
expression: layout
---
{
  "space": [
    820.0,
    1180.0
  ],
  "orientation": "Vertical",
  "left_string_position": [
    [
      356.1875,
      0.0
    ],
    [
      356.1875,
      1180.0
    ]
  ],
  "right_string_position": [
    [
      463.8125,
      0.0
    ],
    [
      463.8125,
      1180.0
    ]
  ],
  "instrument_breadth": 107.62499999999999,
  "key_radius": 21.059044908723276,
  "key_band_length": 356.1875,
  "key_band_breadth": 85.41666666666666,
  "safe_area_padding": {
    "top": 24.0,
    "right": 0.0,
    "bottom": 20.0,
    "left": 0.0
  },
  "key_bands_gap": 16.0,
  "groups_gap": 19.2,
  "num_keys_per_group": 5,
  "num_groups": 2,
  "first_group_channel": "Left",
  "scale": "Yo"
}
