crates/common/src/instrument/snapshots/common__instrument__layout__tests__primes.snap
---
source: crates/common/src/instrument/layout.rs
expression: "LAYOUT_PRIMES.iter().copied().collect::<Vec<u32>>()"
---
[
  2,
  3,
  5,
  7,
  11,
  13,
  17,
  19,
  23,
  29,
  31,
  37,
  41,
  43,
  47,
  53,
  59,
  61,
  67,
  71
]
